--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <title>Document</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   </head>
   <body>
+    <h1 id="titleId" class="title">제목이다.</h1>
+    <button onclick="titlechange()" class="btn">버튼</button>
     <script src="script.js"></script>
   </body>
 </html>
