--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
   <body>
     <h1 id="titleId" class="title">제목이다.</h1>
     <button onclick="titlechange()" class="btn">버튼</button>
-    <script src="script.js"></script>
+    <div id="container">
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+    </div>
+
+    <script src="./script.js"></script>
   </body>
 </html>
