--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   </head>
   <body>
+    <div class="container">
+      <div class="infoPeople"></div>
+    </div>
     <script src="./script.js"></script>
   </body>
 </html>
